gramParser.py
# Generated from gram.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class gramParser ( Parser ):

    grammarFileName = "gram.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'select'", "'from'", "'where'", "';'", 
                     "'delete from'", "'insert into'", "'('", "'values ('", 
                     "', '", "');'", "'*'", "'studno'", "'studentname'", 
                     "'birthday'", "'degree'", "'major'", "'unitsearned'", 
                     "'studno,'", "'studentname,'", "'birthday,'", "'degree,'", 
                     "'major,'", "'unitsearned,'", "'description'", "'action'", 
                     "'datefiled'", "'dateresolved'", "'description,'", 
                     "'action,'", "'datefiled,'", "'dateresolved,'", "'cno'", 
                     "'ctitle'", "'cdesc'", "'noofunits'", "'haslab'", "'semoffered'", 
                     "'cno,'", "'ctitle,'", "'cdesc,'", "'noofunits,'", 
                     "'haslab,'", "'semoffered,'", "'semester'", "'acadyear'", 
                     "'section'", "'time'", "'maxstud'", "'semester,'", 
                     "'acadyear,'", "'section,'", "'time,'", "'maxstud,'", 
                     "'studno)'", "'studentname)'", "'birthday)'", "'degree)'", 
                     "'major)'", "'unitsearned)'", "'action)'", "'datefiled)'", 
                     "'dateresolved)'", "'cno)'", "'ctitle)'", "'cdesc)'", 
                     "'noofunits)'", "'haslab)'", "'semoffered)'", "'semester)'", 
                     "'acadyear)'", "'section)'", "'time)'", "'maxstud)'", 
                     "'student'", "'studenthistory'", "'course'", "'courseoffering'", 
                     "'studcourse'", "'<'", "'>'", "'='", "'!='", "'AND'", 
                     "'OR'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "WS" ]

    RULE_r = 0
    RULE_select_statement = 1
    RULE_delete_statement = 2
    RULE_insert_statement = 3
    RULE_column = 4
    RULE_columnlist = 5
    RULE_table = 6
    RULE_inputValue = 7
    RULE_operators = 8
    RULE_operands = 9
    RULE_condition = 10

    ruleNames =  [ "r", "select_statement", "delete_statement", "insert_statement", 
                   "column", "columnlist", "table", "inputValue", "operators", 
                   "operands", "condition" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    ID=85
    WS=86

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def select_statement(self):
            return self.getTypedRuleContext(gramParser.Select_statementContext,0)


        def delete_statement(self):
            return self.getTypedRuleContext(gramParser.Delete_statementContext,0)


        def insert_statement(self):
            return self.getTypedRuleContext(gramParser.Insert_statementContext,0)


        def getRuleIndex(self):
            return gramParser.RULE_r

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR" ):
                listener.enterR(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR" ):
                listener.exitR(self)




    def r(self):

        localctx = gramParser.RContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_r)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [gramParser.T__0]:
                self.state = 22
                self.select_statement()
                pass
            elif token in [gramParser.T__4]:
                self.state = 23
                self.delete_statement()
                pass
            elif token in [gramParser.T__5]:
                self.state = 24
                self.insert_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Select_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column(self):
            return self.getTypedRuleContext(gramParser.ColumnContext,0)


        def table(self):
            return self.getTypedRuleContext(gramParser.TableContext,0)


        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramParser.ConditionContext)
            else:
                return self.getTypedRuleContext(gramParser.ConditionContext,i)


        def getRuleIndex(self):
            return gramParser.RULE_select_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_statement" ):
                listener.enterSelect_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_statement" ):
                listener.exitSelect_statement(self)




    def select_statement(self):

        localctx = gramParser.Select_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_select_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self.match(gramParser.T__0)
            self.state = 28
            self.column()
            self.state = 29
            self.match(gramParser.T__1)
            self.state = 30
            self.table()
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==gramParser.T__2:
                self.state = 31
                self.match(gramParser.T__2)
                self.state = 32
                self.condition()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.match(gramParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Delete_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def table(self):
            return self.getTypedRuleContext(gramParser.TableContext,0)


        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramParser.ConditionContext)
            else:
                return self.getTypedRuleContext(gramParser.ConditionContext,i)


        def getRuleIndex(self):
            return gramParser.RULE_delete_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDelete_statement" ):
                listener.enterDelete_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDelete_statement" ):
                listener.exitDelete_statement(self)




    def delete_statement(self):

        localctx = gramParser.Delete_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_delete_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(gramParser.T__4)
            self.state = 41
            self.table()
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==gramParser.T__2:
                self.state = 42
                self.match(gramParser.T__2)
                self.state = 43
                self.condition()
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 49
            self.match(gramParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Insert_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def table(self):
            return self.getTypedRuleContext(gramParser.TableContext,0)


        def inputValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramParser.InputValueContext)
            else:
                return self.getTypedRuleContext(gramParser.InputValueContext,i)


        def columnlist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramParser.ColumnlistContext)
            else:
                return self.getTypedRuleContext(gramParser.ColumnlistContext,i)


        def getRuleIndex(self):
            return gramParser.RULE_insert_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsert_statement" ):
                listener.enterInsert_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsert_statement" ):
                listener.exitInsert_statement(self)




    def insert_statement(self):

        localctx = gramParser.Insert_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_insert_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(gramParser.T__5)
            self.state = 52
            self.table()
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==gramParser.T__6:
                self.state = 53
                self.match(gramParser.T__6)
                self.state = 54
                self.columnlist()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(gramParser.T__7)

            self.state = 61
            self.inputValue()
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==gramParser.T__8:
                self.state = 62
                self.match(gramParser.T__8)
                self.state = 63
                self.inputValue()
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self.match(gramParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ColumnContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column(self):
            return self.getTypedRuleContext(gramParser.ColumnContext,0)


        def getRuleIndex(self):
            return gramParser.RULE_column

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumn" ):
                listener.enterColumn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumn" ):
                listener.exitColumn(self)




    def column(self):

        localctx = gramParser.ColumnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_column)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [gramParser.T__10]:
                self.state = 71
                self.match(gramParser.T__10)
                pass
            elif token in [gramParser.T__11]:
                self.state = 72
                self.match(gramParser.T__11)
                pass
            elif token in [gramParser.T__12]:
                self.state = 73
                self.match(gramParser.T__12)
                pass
            elif token in [gramParser.T__13]:
                self.state = 74
                self.match(gramParser.T__13)
                pass
            elif token in [gramParser.T__14]:
                self.state = 75
                self.match(gramParser.T__14)
                pass
            elif token in [gramParser.T__15]:
                self.state = 76
                self.match(gramParser.T__15)
                pass
            elif token in [gramParser.T__16]:
                self.state = 77
                self.match(gramParser.T__16)
                pass
            elif token in [gramParser.T__17]:
                self.state = 78
                self.match(gramParser.T__17)
                self.state = 79
                self.column()
                pass
            elif token in [gramParser.T__18]:
                self.state = 80
                self.match(gramParser.T__18)
                self.state = 81
                self.column()
                pass
            elif token in [gramParser.T__19]:
                self.state = 82
                self.match(gramParser.T__19)
                self.state = 83
                self.column()
                pass
            elif token in [gramParser.T__20]:
                self.state = 84
                self.match(gramParser.T__20)
                self.state = 85
                self.column()
                pass
            elif token in [gramParser.T__21]:
                self.state = 86
                self.match(gramParser.T__21)
                self.state = 87
                self.column()
                pass
            elif token in [gramParser.T__22]:
                self.state = 88
                self.match(gramParser.T__22)
                self.state = 89
                self.column()
                pass
            elif token in [gramParser.T__23]:
                self.state = 90
                self.match(gramParser.T__23)
                pass
            elif token in [gramParser.T__24]:
                self.state = 91
                self.match(gramParser.T__24)
                pass
            elif token in [gramParser.T__25]:
                self.state = 92
                self.match(gramParser.T__25)
                pass
            elif token in [gramParser.T__26]:
                self.state = 93
                self.match(gramParser.T__26)
                pass
            elif token in [gramParser.T__27]:
                self.state = 94
                self.match(gramParser.T__27)
                self.state = 95
                self.column()
                pass
            elif token in [gramParser.T__28]:
                self.state = 96
                self.match(gramParser.T__28)
                self.state = 97
                self.column()
                pass
            elif token in [gramParser.T__29]:
                self.state = 98
                self.match(gramParser.T__29)
                self.state = 99
                self.column()
                pass
            elif token in [gramParser.T__30]:
                self.state = 100
                self.match(gramParser.T__30)
                self.state = 101
                self.column()
                pass
            elif token in [gramParser.T__31]:
                self.state = 102
                self.match(gramParser.T__31)
                pass
            elif token in [gramParser.T__32]:
                self.state = 103
                self.match(gramParser.T__32)
                pass
            elif token in [gramParser.T__33]:
                self.state = 104
                self.match(gramParser.T__33)
                pass
            elif token in [gramParser.T__34]:
                self.state = 105
                self.match(gramParser.T__34)
                pass
            elif token in [gramParser.T__35]:
                self.state = 106
                self.match(gramParser.T__35)
                pass
            elif token in [gramParser.T__36]:
                self.state = 107
                self.match(gramParser.T__36)
                pass
            elif token in [gramParser.T__37]:
                self.state = 108
                self.match(gramParser.T__37)
                self.state = 109
                self.column()
                pass
            elif token in [gramParser.T__38]:
                self.state = 110
                self.match(gramParser.T__38)
                self.state = 111
                self.column()
                pass
            elif token in [gramParser.T__39]:
                self.state = 112
                self.match(gramParser.T__39)
                self.state = 113
                self.column()
                pass
            elif token in [gramParser.T__40]:
                self.state = 114
                self.match(gramParser.T__40)
                self.state = 115
                self.column()
                pass
            elif token in [gramParser.T__41]:
                self.state = 116
                self.match(gramParser.T__41)
                self.state = 117
                self.column()
                pass
            elif token in [gramParser.T__42]:
                self.state = 118
                self.match(gramParser.T__42)
                self.state = 119
                self.column()
                pass
            elif token in [gramParser.T__43]:
                self.state = 120
                self.match(gramParser.T__43)
                pass
            elif token in [gramParser.T__44]:
                self.state = 121
                self.match(gramParser.T__44)
                pass
            elif token in [gramParser.T__45]:
                self.state = 122
                self.match(gramParser.T__45)
                pass
            elif token in [gramParser.T__46]:
                self.state = 123
                self.match(gramParser.T__46)
                pass
            elif token in [gramParser.T__47]:
                self.state = 124
                self.match(gramParser.T__47)
                pass
            elif token in [gramParser.T__48]:
                self.state = 125
                self.match(gramParser.T__48)
                self.state = 126
                self.column()
                pass
            elif token in [gramParser.T__49]:
                self.state = 127
                self.match(gramParser.T__49)
                self.state = 128
                self.column()
                pass
            elif token in [gramParser.T__50]:
                self.state = 129
                self.match(gramParser.T__50)
                self.state = 130
                self.column()
                pass
            elif token in [gramParser.T__51]:
                self.state = 131
                self.match(gramParser.T__51)
                self.state = 132
                self.column()
                pass
            elif token in [gramParser.T__52]:
                self.state = 133
                self.match(gramParser.T__52)
                self.state = 134
                self.column()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ColumnlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def columnlist(self):
            return self.getTypedRuleContext(gramParser.ColumnlistContext,0)


        def getRuleIndex(self):
            return gramParser.RULE_columnlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnlist" ):
                listener.enterColumnlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnlist" ):
                listener.exitColumnlist(self)




    def columnlist(self):

        localctx = gramParser.ColumnlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_columnlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 200
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [gramParser.T__53]:
                self.state = 137
                self.match(gramParser.T__53)
                pass
            elif token in [gramParser.T__54]:
                self.state = 138
                self.match(gramParser.T__54)
                pass
            elif token in [gramParser.T__55]:
                self.state = 139
                self.match(gramParser.T__55)
                pass
            elif token in [gramParser.T__56]:
                self.state = 140
                self.match(gramParser.T__56)
                pass
            elif token in [gramParser.T__57]:
                self.state = 141
                self.match(gramParser.T__57)
                pass
            elif token in [gramParser.T__58]:
                self.state = 142
                self.match(gramParser.T__58)
                pass
            elif token in [gramParser.T__17]:
                self.state = 143
                self.match(gramParser.T__17)
                self.state = 144
                self.columnlist()
                pass
            elif token in [gramParser.T__18]:
                self.state = 145
                self.match(gramParser.T__18)
                self.state = 146
                self.columnlist()
                pass
            elif token in [gramParser.T__19]:
                self.state = 147
                self.match(gramParser.T__19)
                self.state = 148
                self.columnlist()
                pass
            elif token in [gramParser.T__20]:
                self.state = 149
                self.match(gramParser.T__20)
                self.state = 150
                self.columnlist()
                pass
            elif token in [gramParser.T__21]:
                self.state = 151
                self.match(gramParser.T__21)
                self.state = 152
                self.columnlist()
                pass
            elif token in [gramParser.T__22]:
                self.state = 153
                self.match(gramParser.T__22)
                self.state = 154
                self.columnlist()
                pass
            elif token in [gramParser.T__23]:
                self.state = 155
                self.match(gramParser.T__23)
                pass
            elif token in [gramParser.T__59]:
                self.state = 156
                self.match(gramParser.T__59)
                pass
            elif token in [gramParser.T__60]:
                self.state = 157
                self.match(gramParser.T__60)
                pass
            elif token in [gramParser.T__61]:
                self.state = 158
                self.match(gramParser.T__61)
                pass
            elif token in [gramParser.T__27]:
                self.state = 159
                self.match(gramParser.T__27)
                self.state = 160
                self.columnlist()
                pass
            elif token in [gramParser.T__28]:
                self.state = 161
                self.match(gramParser.T__28)
                self.state = 162
                self.columnlist()
                pass
            elif token in [gramParser.T__29]:
                self.state = 163
                self.match(gramParser.T__29)
                self.state = 164
                self.columnlist()
                pass
            elif token in [gramParser.T__30]:
                self.state = 165
                self.match(gramParser.T__30)
                self.state = 166
                self.columnlist()
                pass
            elif token in [gramParser.T__62]:
                self.state = 167
                self.match(gramParser.T__62)
                pass
            elif token in [gramParser.T__63]:
                self.state = 168
                self.match(gramParser.T__63)
                pass
            elif token in [gramParser.T__64]:
                self.state = 169
                self.match(gramParser.T__64)
                pass
            elif token in [gramParser.T__65]:
                self.state = 170
                self.match(gramParser.T__65)
                pass
            elif token in [gramParser.T__66]:
                self.state = 171
                self.match(gramParser.T__66)
                pass
            elif token in [gramParser.T__67]:
                self.state = 172
                self.match(gramParser.T__67)
                pass
            elif token in [gramParser.T__37]:
                self.state = 173
                self.match(gramParser.T__37)
                self.state = 174
                self.columnlist()
                pass
            elif token in [gramParser.T__38]:
                self.state = 175
                self.match(gramParser.T__38)
                self.state = 176
                self.columnlist()
                pass
            elif token in [gramParser.T__39]:
                self.state = 177
                self.match(gramParser.T__39)
                self.state = 178
                self.columnlist()
                pass
            elif token in [gramParser.T__40]:
                self.state = 179
                self.match(gramParser.T__40)
                self.state = 180
                self.columnlist()
                pass
            elif token in [gramParser.T__41]:
                self.state = 181
                self.match(gramParser.T__41)
                self.state = 182
                self.columnlist()
                pass
            elif token in [gramParser.T__42]:
                self.state = 183
                self.match(gramParser.T__42)
                self.state = 184
                self.columnlist()
                pass
            elif token in [gramParser.T__68]:
                self.state = 185
                self.match(gramParser.T__68)
                pass
            elif token in [gramParser.T__69]:
                self.state = 186
                self.match(gramParser.T__69)
                pass
            elif token in [gramParser.T__70]:
                self.state = 187
                self.match(gramParser.T__70)
                pass
            elif token in [gramParser.T__71]:
                self.state = 188
                self.match(gramParser.T__71)
                pass
            elif token in [gramParser.T__72]:
                self.state = 189
                self.match(gramParser.T__72)
                pass
            elif token in [gramParser.T__48]:
                self.state = 190
                self.match(gramParser.T__48)
                self.state = 191
                self.columnlist()
                pass
            elif token in [gramParser.T__49]:
                self.state = 192
                self.match(gramParser.T__49)
                self.state = 193
                self.columnlist()
                pass
            elif token in [gramParser.T__50]:
                self.state = 194
                self.match(gramParser.T__50)
                self.state = 195
                self.columnlist()
                pass
            elif token in [gramParser.T__51]:
                self.state = 196
                self.match(gramParser.T__51)
                self.state = 197
                self.columnlist()
                pass
            elif token in [gramParser.T__52]:
                self.state = 198
                self.match(gramParser.T__52)
                self.state = 199
                self.columnlist()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramParser.RULE_table

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTable" ):
                listener.enterTable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTable" ):
                listener.exitTable(self)




    def table(self):

        localctx = gramParser.TableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_table)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            _la = self._input.LA(1)
            if not(((((_la - 74)) & ~0x3f) == 0 and ((1 << (_la - 74)) & ((1 << (gramParser.T__73 - 74)) | (1 << (gramParser.T__74 - 74)) | (1 << (gramParser.T__75 - 74)) | (1 << (gramParser.T__76 - 74)) | (1 << (gramParser.T__77 - 74)))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InputValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramParser.RULE_inputValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputValue" ):
                listener.enterInputValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputValue" ):
                listener.exitInputValue(self)




    def inputValue(self):

        localctx = gramParser.InputValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_inputValue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 205 
            self._errHandler.sync(self)
            _alt = 1+1
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1+1:
                    self.state = 204
                    self.matchWildcard()

                else:
                    raise NoViableAltException(self)
                self.state = 207 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OperatorsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramParser.RULE_operators

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperators" ):
                listener.enterOperators(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperators" ):
                listener.exitOperators(self)




    def operators(self):

        localctx = gramParser.OperatorsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_operators)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 209
            _la = self._input.LA(1)
            if not(((((_la - 79)) & ~0x3f) == 0 and ((1 << (_la - 79)) & ((1 << (gramParser.T__78 - 79)) | (1 << (gramParser.T__79 - 79)) | (1 << (gramParser.T__80 - 79)) | (1 << (gramParser.T__81 - 79)))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OperandsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(gramParser.ConditionContext,0)


        def getRuleIndex(self):
            return gramParser.RULE_operands

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperands" ):
                listener.enterOperands(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperands" ):
                listener.exitOperands(self)




    def operands(self):

        localctx = gramParser.OperandsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_operands)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 215
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [gramParser.T__82]:
                self.state = 211
                self.match(gramParser.T__82)
                self.state = 212
                self.condition()
                pass
            elif token in [gramParser.T__83]:
                self.state = 213
                self.match(gramParser.T__83)
                self.state = 214
                self.condition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column(self):
            return self.getTypedRuleContext(gramParser.ColumnContext,0)


        def operators(self):
            return self.getTypedRuleContext(gramParser.OperatorsContext,0)


        def inputValue(self):
            return self.getTypedRuleContext(gramParser.InputValueContext,0)

